# profiles

./: .env.local  Cargo.toml  Dockerfile  LICENSE  compose.yml
migrations/: init.sql
src/: main.rs
src/api/: candidate.rs  cv.rs  experience.rs  mod.rs  reference.rs  utils.rs
src/api/dtos/: candidate.rs  experience.rs  list_candidate.rs  mod.rs  reference.rs
src/api/extractors/: auth_headers.rs  mod.rs
src/api/middlewares/: auth_headers.rs  is_admin.rs  mod.rs
src/models/: candidate.rs  experience.rs  mod.rs  reference.rs
