[package]
name = "season-link-profiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.6.20", features = ["macros"] }
axum-valid = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.190"
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "uuid",
  "time",
  "chrono",
] }
tokio = { version = "1.33.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive", "phone"] }

[dependencies.uuid]
version = "1.5.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
